--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "moduleResolution": "node",
     "esModuleInterop": true,                  
     "forceConsistentCasingInFileNames": true, 
+    "skipLibCheck": true
     }, 
     "include": ["src"],
     "exclude": ["node_modules", "dist"]
