--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "cadastro-ts",
-    "author": "Microsoft Corp.",
+    "author": "Carmin Dias",
     "homepage": "https://www.typescriptlang.org/",
     "version": "^5.7.3",
     "license": "Apache-2.0",
