--- a/package.json
+++ b/package.json
@@ -17,20 +17,13 @@
         "lint": "eslint src --ext .ts",
         "test": "jest"
     },
-    "browser": {
-        "fs": false,
-        "os": false,
-        "path": false,
-        "crypto": false,
-        "buffer": false,
-        "source-map-support": false,
-        "inspector": false,
-        "perf_hooks": false
+    "dependencies": {
+        "express": "^4.18.2"
     },
-    "packageManager": "npm@8.19.4",
-    "volta": {
-        "node": "20.1.0",
-        "npm": "8.19.4"
+    "devDependencies": {
+        "typescript": "^5.7.3",
+        "ts-node": "^10.9.2",
+        "@types/node": "^18.16.0"
     },
     "gitHead": "a5e123d9e0690fcea92878ea8a0a382922009fc9"
     
