--- a/package.json
+++ b/package.json
@@ -23,8 +23,14 @@
     "devDependencies": {
         "typescript": "^5.7.3",
         "ts-node": "^10.9.2",
-        "@types/node": "^18.16.0"
+        "@types/node": "^18.16.0",
+        "@types/express": "^4.17.15",
+        "eslint": "^9.11.1",
+        "jest": "^29.6.1"
     },
-    "gitHead": "a5e123d9e0690fcea92878ea8a0a382922009fc9"
+        "engines": {
+        "node": ">=14.17"
+    }, 
+        "packageManager": "npm@8.19.4"
     
 }
